@@ -22,28 +22,13 @@ def main():
     parser = argparse.ArgumentParser(
         description="Validate a Concrete Communication file")
     parser.add_argument('communication_file')
-    parser.add_argument('-l', '--loglevel', choices=['debug', 'info',
-                                                     'warning', 'error'],
-                        help="Log level threshold")
+    parser.add_argument('-l', '--loglevel',
+                        help='Logging verbosity level threshold (to stderr)',
+                        default='info')
     concrete.version.add_argparse_argument(parser)
     args = parser.parse_args()
 
-    # Set logging level
-    if args.loglevel:
-        lowercase_loglevel = args.loglevel.lower()
-        if lowercase_loglevel == 'debug':
-            loglevel = logging.DEBUG
-        elif lowercase_loglevel == 'info':
-            loglevel = logging.INFO
-        elif lowercase_loglevel == 'warning':
-            loglevel = logging.WARNING
-        elif lowercase_loglevel == 'error':
-            loglevel = logging.ERROR
-        else:
-            loglevel = logging.DEBUG
-    else:
-        loglevel = logging.DEBUG
-    logging.basicConfig(format='%(levelname)7s:  %(message)s', level=loglevel)
+    logging.basicConfig(format='%(levelname)7s:  %(message)s', level=args.loglevel.upper())
 
     validate_communication_file(args.communication_file)
 
